Added Answer and New Game buttons. Generating random new game seed for New Game button. Minor coloring added to answer page.

--- a/game/templates/game/answer.html
+++ b/game/templates/game/answer.html
@@ -15,9 +15,9 @@
     <div class="row">
         <div class="col-xs-8 col-xs-offset-2 col-md-4">
             {% if not answers %}
-                <p>No words found.</p>
+                <p class="bg-danger">No words found.</p>
             {% else %}
-                <p>
+                <p class="bg-info">
                 {% for answer in answers %}
                 {{ answer }} 
                 {% endfor %}
